--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,15 +53,10 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
-    "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-serif: "Times New Roman", Times, serif;
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
-  --bs-gradient: linear-gradient(180deg,
-      rgba(255, 255, 255, 0.15),
-      rgba(255, 255, 255, 0));
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
@@ -205,6 +200,15 @@ a:hover {
 
 #hero-banner {
   position: relative;
+  height: 500px;
+}
+
+#hero-banner>img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
 }
 
 #hero-text {
@@ -215,15 +219,27 @@ a:hover {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 20px;
+
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto auto;
+  column-gap: 16px;
+  align-items: end;
 }
 
 #hero-text h1 {
   font-size: 3rem;
   margin: 0;
+  grid-column: 1;
+  grid-row: 1 / 3;
+  line-height: 1;
 }
 
 #hero-text span {
   font-size: 1rem;
+  grid-column: 2;
+  display: block;
+  line-height: 1.1;
 }
 
 #park-header {
@@ -259,7 +275,6 @@ a:hover {
   font-size: 0.8rem;
 }
 
-/* Reset for SVG icons */
 svg {
   fill: white;
 }
@@ -270,4 +285,74 @@ svg {
 
 .disclaimer {
   margin: 20px;
+}
+
+.intro {
+  margin: 30px;
+}
+
+.info-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
+.info-grid p {
+  color: black;
+  text-decoration: none;
+}
+
+.info-grid h3 {
+  color: black;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 1.25rem;
+  padding: 1rem 1.25rem;
+  margin: 0 auto;
+}
+
+.media-card {
+  background: var(--bs-white);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.media-card a {
+  color: black;
+  text-decoration: none;
+  display: block;
+}
+
+.media-card__title {
+  font-size: 1.5rem;
+}
+
+#park-footer {
+  padding: 20px;
+  background-image: url("/images/topo_pattern.png");
+}
+
+
+@media (max-width: 480px) {
+  .info {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    padding: .75rem;
+  }
+
+  .media-card__title {
+    font-size: 1rem;
+  }
 }
