--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+@import url('conditions.css');
+
 :root {
   --bs-black: #000;
   --bs-brown: #393423;
@@ -73,8 +75,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #005999;
-  --bs-link-hover-color: #003e6b;
+  --bs-link-color: #000000;
+  --bs-link-hover-color: #0373c4;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
